style bug on iphone 4s

--- a/src/Game.css
+++ b/src/Game.css
@@ -26,6 +26,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
+  height: 80px;
 
   background-color: white;
   border-top: 2px inset black;
